2009-04-03  Jason Merrill  <jason@redhat.com>

	PR c++/25185
	* error.c (dump_template_bindings): Look through typedefs in
	typename results.
	(dump_type) [TYPENAME_TYPE]: Print the typedef name if any.
	(find_typenames_r): Also collect typedefs.
	* pt.c (unify): Strip typedefs.

	PR c++/39608
	* semantics.c (finish_id_expression): Don't assume a dependent
	member of the current instantiation isn't a valid integral
	constant expression.  Check dependent_scope_p.
	* pt.c (dependent_scope_p): Check TYPE_P.
	(tsubst_copy): If args is null, just return.

2009-04-02  Jason Merrill  <jason@redhat.com>

	PR c++/25185
	* error.c (find_typenames, find_typenames_r): New fns.
	(dump_function_decl): Call find_typenames.
	(dump_template_bindings): Print typenames as well.
	* pt.c (tsubst): Non-static.
	* cp-tree.h: Declare it.

2009-04-02  Dodji Seketeli  <dodji@redhat.com>

	PR c++/26693
	* decl2.c (grokfield): when a typedef appears in a
	class, create the typedef variant type node for it.
	(save_template_attributes): Creating typedef variant type node
	 here is now useless.
	* decl.c (grokdeclarator): If the typedef'ed struct/class was
	anonymous, set the proper type name to all its type variants.
	(xref_basetypes) : Fixup the variant types after setting
	TYPE_BINFO on REF.
	* name-lookup.c (pushdecl_maybe_friend): Reuse the
	set_underlying_type function to install typedef variant types.
	* cp-tree.h (MEMBER_TYPES_NEEDING_ACCESS_CHECK): New template accessor
	macro.
	(append_type_to_template_for_access_check): New entry points.
	* semantics.c (check_accessibility_of_qualified_id):
	When a typedef that is a member of a class appears in a template,
	add it to the template. It will be ...
	* class.c (finish_struct_bits): Split type variant fixup into ...
	(fixup_type_variants): A new entry point.
	* pt.c (instantiate_class_template, instantiate_template ): ... access
	checked at template instantiation time.
	(resolve_type_name_type): The type name should be the name of the